# BlockByte

./: .gitignore  Cargo.toml  aaa.txt  block_rotation.py  generate_assets.py
.templates/bb:ore_type/item/ore/: §%{oreType}.ron
.templates/bb:ore_type/texture/ore/: §%{oreType}_chunk.ron
.templates/bb:rock_ore/block/ore/: §%{oreType}_§%{rockType}.ron  §%{oreType}_§%{rockType}_stone.ron
.templates/bb:rock_ore/texture/ore/: §%{oreType}_§%{rockType}.ron
.templates/bb:rock_type/block/rock/§%{rockType}/: bricks.ron  bricks_slab.ron  bricks_stair.ron  cobble.ron  cobble_slab.ron  cobble_stair.ron  mossy_bricks.ron  mossy_bricks_slab.ron  mossy_bricks_stair.ron  mossy_cobble.ron  mossy_cobble_slab.ron  mossy_cobble_stair.ron  mossy_rock.ron  rock.ron  stone.ron
.templates/bb:rock_type/item/rock/§%{rockType}/: brick.ron  stone.ron
.templates/bb:rock_type/texture/rock/: §%{rockType}.ron  §%{rockType}_bricks.ron  §%{rockType}_bricks_mossy.ron  §%{rockType}_cobble.ron  §%{rockType}_cobble_mossy.ron  §%{rockType}_mossy.ron
.templates/bb:wood_type/block/wood/§%{woodType}/: branch.ron  leaves.ron  log.ron  plank.ron  plank_fence.ron  plank_slab.ron  plank_stair.ron  slab.ron  stick.ron  wood.ron
.templates/bb:wood_type/item/wood/§%{woodType}/: log.ron  plank.ron  stick.ron
.templates/bb:wood_type/texture/wood/§%{woodType}/: bark.anim  bark.ron  bark2!.ron  cut.ron  plank.ron
assets/: world_generator.ron
assets/biome/: desert.ron  forest.ron  jungle.ron  meadow.ron  savanna.ron  swamp.ron  wasteland.ron
assets/block/: #prefab_replacable.txt  #soil.txt  #structure_replacable.txt  air.ron  arrow.ron  barrel.ron
assets/block/nature/: branch.ron  cobblestone.ron  cobblestone_half.ron  cobblestone_stair.ron  dirt.ron  dirt_slab.ron  grass.ron  grass_slab.ron  leaves.ron  rock.ron  stick.ron  stone.ron  wood.ron  wood_half.ron
assets/entity/: designer.ron  item.ron  player.ron  pocong.ron
assets/item/: arrow.ron  barrel.ron  dirt.ron  grass_item.ron  leaves.ron  pickaxe.ron  rock.ron  stick.ron  stone.ron  wood.ron
assets/language/: en.txt
assets/loot_table/: empty.ron
assets/model/: arrow.bbmodel  beam.bbmodel  branch.bbmodel  brick.bbmodel  conveyor.bbmodel  fence_connector.bbmodel  item.bbmodel  leaves.bbmodel  pickaxe.bbmodel  pillar.bbmodel  player.bbmodel  pocong.bbmodel  rock.bbmodel  slab.bbmodel  stair.bbmodel  stick.bbmodel  stone.bbmodel  viewmodel.bbmodel
assets/plant/: grass.ron
assets/prefab/: bigrock.ron  fallen_tree.ron  leaf_pile.ron  outpost.ron  rock.ron  small_rock.ron  small_stick.ron  tree.ron
assets/recipe/: #player_crafting.txt  generate_dirt.ron  pickaxe.ron  polish_rock.ron
assets/research/: #player_research.txt  stonework.ron  woodwork.ron
assets/structure/: outpost.ron  rock.ron  small_rock.ron  small_stick.ron  tree.ron
assets/texture/: #skip.txt  grass_block_side.ron  grass_block_side_slab.ron
assets/texture/dirt/: #dirt.txt  dirt2.ron  dirt3.ron  dirt4.ron  grass_block_side.ron
assets/ui/: barrel.xml  hud.xml  player.xml  player_creative.xml
assets/ui_style/: root.style  slot.style
assets/world_generator/: default.ron
block_byte_client/: Cargo.toml
block_byte_client/src/: atlas.rs  game.rs  main.rs  render.rs  ui.rs
block_byte_client/src/shaders/: base.wgsl  base_shadow.wgsl  blur.wgsl  chunk.wgsl  chunk_shadow.wgsl  common.wgsl  damage.wgsl  gui.wgsl  gui_shader.wgsl  postprocess.wgsl  shader.wgsl  shadow.wgsl  shadow_sample.wgsl  skybox.wgsl  texture_animation.wgsl
block_byte_common/: Cargo.toml
block_byte_common/src/: coord.rs  lib.rs  model.rs  net.rs  registry.rs  rotation.rs  scripts.rs  ui.rs  world.rs
block_byte_server/: Cargo.toml
block_byte_server/src/: debug.rs  inventory.rs  main.rs  registry.rs  world.rs  worldgen.rs  worldgen_vis.rs
