[package]
name = "block_byte_client"
version = "0.1.0"
edition = "2024"

[dependencies]
block_byte_common = { path = "../block_byte_common", features = ["client"] }
wgpu = "29.0.1"
pollster = "0.3"
bytemuck = { version = "1.13.1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }
cgmath = "0.18"
texture_packer = { version = "0.30.0" }
renet = "1.2.0"
renet_netcode = "1.2.0"
winit = "0.30.12"
parking_lot = "0.12.5"
rayon = "1.11.0"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
rusttype = "0.9.3"
taffy = "0.9.2"
base64 = "0.22.1"
serde_cbor = "0.11.2"
rand = "0.9.2"
rand_seeder = "0.4.0"
lz4_flex = { version = "0.12", default-features = false, features = [
    "frame",
    "std",
] }
ahash = "0.8.12"
smallvec = { version = "1.15.1", features = ["serde"] }
include_dir = "0.7.4"
