[package]
name = "block_byte_common"
version = "0.1.0"
edition = "2024"

[dependencies]
num-integer = "0.1.46"
serde = { version = "1.0.228", features = ["derive"] }
palettevec = { version = "0.4.0", features = ["serde"] }
walkdir = "2.5.0"
ron = "0.12.0"
image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg",
], optional = true }
anyhow = "1.0.100"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
parking_lot = { version = "0.12.5", features = ["serde"], optional = true }

[features]
client = ["dep:image"]
server = ["dep:parking_lot"]
