[package]
name = "block_byte_common"
version = "0.1.0"
edition = "2024"

[dependencies]
num-integer = "0.1.46"
serde = { version = "1.0.228", features = ["derive"] }
palettevec = { version = "0.4.0", features = ["serde"] }
walkdir = "2.5.0"
ron = "0.12.0"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
], optional = true }
anyhow = "1.0.100"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
roxmltree = "0.21.1"
taffy = "0.9.2"
cgmath = "0.18"
serde_json = "1.0.149"
renet = "1.2.0"
image-overlay = "2.0.0"
serde_default_utils = "0.3.1"
smallvec = { version = "1.15.1", features = ["serde"] }

[features]
client = ["dep:image"]
server = []
