[package]
name = "block_byte_server"
version = "0.1.0"
edition = "2024"

[dependencies]
block_byte_common = {path = "../block_byte_common", features=["server"]}
palettevec = {version="0.4.0", features=["serde"]}
smallvec = "1.15.1"
parking_lot = "0.12.5"
serde = {version="1.0.228", features=["derive"]}
websocket = "0.27.1"
rusqlite = "0.37.0"
slotmap = "1.1.1"
bincode = {version="2.0.1", features=["serde"]}