[package]
name = "block_byte_server"
version = "0.1.0"
edition = "2024"

[dependencies]
block_byte_common = { path = "../block_byte_common", features = ["server"] }
palettevec = { version = "0.4.0", features = ["serde"] }
smallvec = { version = "1.15.1", features = ["serde"] }
parking_lot = { version = "0.12.5", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
rusqlite = "0.37.0"
slotmap = "1.1.1"
renet = "1.2.0"
renet_netcode = "1.2.0"
rayon = "1.11.0"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
serde_cbor = "0.11.2"
noise = "0.9.0"
rand = "0.9.3"
rand_seeder = "0.4.0"
splines = "5.0.0"
moka = { version = "0.12.13", features = ["sync"] }
ron = "0.12.0"
lz4_flex = { version = "0.12", default-features = false, features = [
    "frame",
    "std",
] }
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }
pathfinding = "4.15.0"
ctrlc = "3.5.2"
ahash = "0.8.12"
serde_default_utils = "0.3.1"
rand_xoshiro = "0.7.0"
